<resources>
    <string name="app_name">My Application</string>
    <string name="login_as">Login as:</string>
    <string name="admin">Admin</string>
    <string name="user">User</string>
    <string name="password">Password:</string>
    <string name="e_mail">E-mail:</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_as_user">Sign in as User</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username:</string>
    <string name="sing_up_as_administrator">Sing up as Administrator</string>
    <string name="administrator_key">Administrator Key:</string>
    <string name="sign_up_as_user">Sign up as User</string>
    <string name="BACK1">BACK</string>
    <string name="BACK2">BACK</string>
    <string name="enter_item">Enter Item</string>
    <string name="Add">add</string>
    <string name="home1">Home</string>
    <string name="calendar1">Calendar</string>
    <string name="my_profile1">My profile</string>
    <string name="to_do_list1">TO DO LIST</string>
    <string name="salary">Salary</string>
    <string name="employees">Employees</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="finance">Finance</string>
    <string name="to_do_list">TO DO LIST</string>
    <string name="chat">chat</string>
    <string name="user_sign_in">USER SIGN IN</string>
    <string name="user_sign_up">USER SIGN UP</string>
    <string name="back1">BACK</string>
    <string name="log_in1">Log IN</string>
    <string name="keep_me_signed_in1">Keep me signed in</string>
    <string name="signin">Sign In</string>
    <string name="email">E-mail</string>
    <string name="signup">SIGN UP</string>
    <string name="i_m_not_a_robot">I\'m not a Robot</string>
    <string name="signup_">Sign Up</string>
    <string name="re_enter_password1">Re-enter Password</string>
    <string name="pic">pic</string>
    <string name="my_profile">My profile</string>
    <string name="imj">imj</string>
    <string name="back3">BACK</string>
    <string name="email1">Email</string>
    <string name="admin_sign_in">ADMIN SIGN IN</string>
    <string name="admin_sign_up">ADMIN SIGN UP</string>
    <string name="back4">BACK</string>
    <string name="admin_signin">Admin Sign In</string>
    <string name="log_in">Log IN</string>
    <string name="keep_me_signed_in">Keep me signed in</string>
    <string name="password1">Password</string>
    <string name="e_mail1">E-mail</string>
    <string name="admin_signup">Admin Sign Up</string>
    <string name="signup1">Sign Up</string>
    <string name="im_not_a_robot">I\'m not a Robot</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="password2">Password</string>
    <string name="e_mail2">E-mail</string>
    <string name="search">Search</string>
    <string name="month">Month:</string>
    <string name="shifts">Shifts</string>
    <string name="logo">logo</string>
    <string name="gender">Gender</string>
    <string name="edit">Edit</string>
    <string name="confirm">CONFIRM</string>
    <string name="yourname">Your Name</string>
    <string name="yourphone">Your Phone</string>
    <string name="yourgender">Your Gender</string>
    <string name="youremail">Your Email</string>
    <string name="youraddress">Your Address</string>
    <string name="days">Days</string>
    <string name="workonweekend">Work On Weekend</string>
    <string name="hints">Hints</string>
    <string name="numofshifts">Number of Shifts</string>
    <string name="numofdays">Number of Days</string>
    <string name="next">Next</string>
    <string name="program1">Program</string>
    <string name="date">Date</string>
    <string name="setprogram">Set Program</string>
    <string name="income">Income:</string>
    <string name="expenses">Expenses:</string>
    <string name="back5">BACK</string>
    <string name="delete">DELETE</string>
    <string name="calculate">Calculate</string>
    <string name="back">BACK</string>
    <string name="previous">Previous</string>
    <string name="income1">Income</string>
    <string name="user_login">User Login</string>
    <string name="user_signup">User Signup</string>
    <string name="adminsignup">admin signup</string>
    <string name="welcome">Welcome</string>
    <string name="admin_login">Admin Login</string>
    <string name="sign_up_AdminL">Sign Up</string>
    <string name="Sing_Up_UserL">Sign Up</string>
    <string name="i_m_not_a_robotUSU">I\'m not a Robot</string>
    <string name="e_mailUSU">E-mail</string>
    <string name="re_enter_passwordUSU">Re-enter Password</string>
    <string name="passwordUSU">Password</string>
    <string name="sign_upUSU">Sign Up</string>
    <string name="deleteTODO">DELETE</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="button">Button</string>
    <string name="Back">back</string>
    <string name="textview">TextView</string>
    <string name="register">Register</string>
    <string name="phone">Phone Number</string>
    <string name="phonenumberexample">69123456789</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="close">Close</string>
    <string name="fire">Fire</string>
    <string name="imagedesc">ImageDescription</string>
    <string name="barackobama">BarackObama</string>
    <string name="washingtonus">Washington US</string>
    <string name="workinghours">Working Hours</string>
    <string name="numberexample">150</string>
    <string name="fullname">Full-Name</string>
    <string name="todologo">TodoLogo</string>
    <string name="log_out">Log Out</string>
    <string name ="select_an_employee_to_fire">Select An Employee To Fire</string>
    <string name="managestaff">Manage Stuff</string>
    <string name="workers">Workers</string>
    <string name="sunday">Sunday</string>
    <string name="saterday">Saturday</string>
    <string name="program">Program</string>
</resources>