<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/gradient"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/button16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_sign_in"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="300dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_sign_up"
        tools:layout_editor_absoluteX="234dp"
        tools:layout_editor_absoluteY="300dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="398dp"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>