<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="200dp"
        android:layout_height="39dp"
        android:text="@string/sign_up_AdminL"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#C4C4C4"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textColor="#C4C4C4"
        android:textColorHint="#C4C4C4"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.988"
        android:autofillHints="email" />

    <EditText
        android:id="@+id/editTextTextPersonName8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:textColorHint="#C4C4C4"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.992"
        android:autofillHints="password" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="184dp"
        android:layout_height="40dp"
        android:text="@string/im_not_a_robot"
        android:textColor="#C4C4C4"
        android:textStyle="bold"
        app:buttonTint="#C4C4C4"
        app:layout_constraintBottom_toTopOf="@+id/button12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.932" />

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="#C4C4C4"
        android:textStyle="bold"
        app:backgroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.655" />

    <EditText
        android:id="@+id/editTextTextPersonName9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/re_enter_password"
        android:inputType="textPersonName"
        android:textColorHint="#C4C4C4"
        android:textColorLink="#C4C4C4"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/checkBox4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.876"
        android:autofillHints="re enter password" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="342dp"
        android:layout_height="64dp"
        android:layout_marginStart="132dp"
        android:layout_marginLeft="132dp"
        android:layout_marginTop="733dp"
        android:layout_marginBottom="16dp"
        android:text="@string/administrator_key"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.293" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="318dp"
        android:layout_height="32dp"
        android:layout_marginStart="404dp"
        android:layout_marginLeft="404dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="1248dp"
        android:text="@string/sing_up_as_administrator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.542" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="338dp"
        android:layout_height="68dp"
        android:layout_marginStart="134dp"
        android:layout_marginLeft="134dp"
        android:layout_marginTop="278dp"
        android:layout_marginBottom="1163dp"
        android:text="@string/username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="154dp"
        android:layout_height="77dp"
        android:layout_marginStart="448dp"
        android:layout_marginLeft="448dp"
        android:layout_marginTop="933dp"
        android:layout_marginBottom="24dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.417" />
</androidx.constraintlayout.widget.ConstraintLayout>