<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="89dp"
        android:layout_marginLeft="89dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:contentDescription="@string/user_signup"
        app:layout_constraintEnd_toStartOf="@+id/textView10"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/application" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="92dp"
        android:layout_marginRight="92dp"
        android:text="@string/admin_signup"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#C4C4C4"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="About You" />

    <Button
        android:id="@+id/btn_User_Info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginLeft="159dp"
        android:layout_marginEnd="164dp"
        android:layout_marginRight="164dp"
        android:text="@string/signup1"
        android:textColor="@color/grey"
        android:textSize="18sp"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        tools:text="create profile" />

    <EditText
        android:id="@+id/User_Phone"
        android:layout_width="225dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textColor="#C4C4C4"
        android:textColorHint="#C4C4C4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/User_Address" />

    <EditText
        android:id="@+id/User_Address"
        android:layout_width="229dp"
        android:layout_height="41dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text"
        android:hint="@string/address"
        android:textColor="#C4C4C4"
        android:textColorHint="#C4C4C4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/User_Name"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/User_Name"
        android:layout_width="224dp"
        android:layout_height="42dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="98dp"
        android:layout_marginRight="98dp"
        android:layout_marginBottom="13dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text"
        android:hint="@string/fullname"
        android:textColor="#C4C4C4"
        android:textColorHint="#C4C4C4"
        app:layout_constraintBottom_toTopOf="@+id/User_Address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <CheckBox
        android:id="@+id/User_GMale"
        android:layout_width="76dp"
        android:layout_height="51dp"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/male"
        android:textColor="#C4C4C4"
        app:layout_constraintEnd_toStartOf="@+id/User_FMale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/User_Phone" />

    <CheckBox
        android:id="@+id/User_FMale"
        android:layout_width="87dp"
        android:layout_height="47dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="97dp"
        android:layout_marginRight="97dp"
        android:text="@string/female"
        android:textColor="#C4C4C4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/User_GMale"
        app:layout_constraintTop_toBottomOf="@+id/User_Phone" />

</androidx.constraintlayout.widget.ConstraintLayout>