<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="130dp"
        android:layout_height="83dp"
        android:layout_marginTop="50dp"
        android:text="@string/admin_login"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#C4C4C4"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Email2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.648"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/log_in"
        android:textColor="@color/dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="#EF0183" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="203dp"
        android:layout_height="23dp"
        android:layout_marginBottom="52dp"
        android:text="@string/keep_me_signed_in"
        android:textColor="#C4C4C4"
        android:textStyle="bold"
        app:buttonTint="#C4C4C4"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password2"
        app:layout_constraintVertical_bias="0.204" />

    <EditText
        android:id="@+id/Password2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#C4C4C4"
        android:textColorHint="#C4C4C4"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email2"
        app:layout_constraintVertical_bias="0.0"
        android:autofillHints="" />

    <EditText
        android:id="@+id/Email2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textColor="#FBFBFB"
        android:textColorHint="#C4C4C4"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35000002"
        tools:ignore="TextFields"
        android:autofillHints="" />

    <ImageView
        android:id="@+id/logoAdminLogin"
        android:layout_width="65dp"
        android:layout_height="65dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092"
        app:srcCompat="@drawable/application"
        android:contentDescription="@string/todologo" />

</androidx.constraintlayout.widget.ConstraintLayout>