<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context=".AdminRegister">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="124dp"
        android:layout_height="53dp"
        android:layout_marginStart="105dp"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="106dp"
        android:layout_marginRight="106dp"
        android:text="@string/register"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#C4C4C4"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Register" />

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/signup1"
        android:textColor="@color/dark"
        android:textColorHint="#C4C4C4"
        android:textSize="18sp"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="sign up" />

    <EditText
        android:id="@+id/Admin_RePass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/re_enter_password"
        android:inputType="textPassword"
        android:textColor="#C4C4C4"
        android:textColorHint="#C4C4C4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Admin_Pass" />

    <EditText
        android:id="@+id/Admin_Pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/password1"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="#C4C4C4"
        android:textColorHint="#C4C4C4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Admin_Mail" />

    <EditText
        android:id="@+id/Admin_Mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="98dp"
        android:layout_marginRight="98dp"
        android:ems="10"
        android:hint="@string/e_mail2"
        android:importantForAutofill="no"
        android:inputType="textWebEmailAddress"
        android:textColor="#FBFBFB"
        android:textColorHighlight="#C4C4C4"
        android:textColorHint="#C4C4C4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/to_do_list"
        app:layout_constraintEnd_toStartOf="@+id/textView10"
        app:layout_constraintHorizontal_bias="0.853"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/application" />

</androidx.constraintlayout.widget.ConstraintLayout>